--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,3 +1,34 @@
-<template name="about">
+<template name="home">
+  <div class="home">
+    <div class="about">
+      <p>
+      Readymade cronut fashion axe consequat messenger bag. Narwhal quinoa selfies leggings, typewriter +1 post-ironic. Trust fund umami gluten-free hashtag normcore hella et, sed qui health goth excepteur Thundercats kitsch dreamcatcher. 
+      </p>
+      <p>
+      Culpa labore sed, four dollar toast aliqua vinyl dolor next level irure Williamsburg Schlitz. Veniam Pitchfork organic culpa. Esse retro umami, meggings et yr sustainable wayfarers butcher assumenda. Do master cleanse fap officia, 90's fashion axe mustache veniam freegan delectus jean shorts.
+      </p>
+      <!-- See some projects I have worked on recently → -->
 
+      <p>
+      Brooklyn banjo XOXO occupy organic, Wes Anderson ugh hoodie Pinterest biodiesel distillery pop-up letterpress migas yr. Aute selvage squid blog migas, sartorial gluten-free eiusmod banh mi 3 wolf moon. Culpa Pitchfork esse, ut id duis adipisicing selvage whatever gluten-free occaecat. Sriracha ugh fixie in Pinterest.
+      </p>
+      <p>
+      Culpa Pitchfork esse, ut id duis adipisicing selvage whatever gluten-free occaecat. Sriracha ugh fixie in Pinterest. Selvage PBR&B sriracha distillery consequat PBR Austin pariatur Williamsburg. Shabby chic dolor est aute bespoke, enim occupy church-key officia. Nihil Neutra sriracha, vero retro Vice polaroid cray vegan wolf craft beer Shoreditch.
+      </p>
+      <!-- See a recent design oriented project → -->
+      <p>
+      Slow-carb leggings crucifix pug cliche, letterpress YOLO direct trade banh mi artisan. Nisi distillery trust fund, High Life irony crucifix street art culpa Kickstarter typewriter PBR&B American Apparel flexitarian nulla. Try-hard seitan Vice occaecat.
+      </p>
+    </div>
+    <div class="short-profile">
+      <img src="me.jpg"/>
+      <p>
+        You can see some of the things I’ve worked on over on my projects page and my <a href="http://github.com/sircharleswatson" target="_blank">Github</a> page.
+      </p>
+      <p>
+        Alternatively, you can find me on <a href="http://stackoverflow.com/users/1681809/sircharleswatson" target="_blank">Stackoverflow</a> or <a href="https://twitter.com/SirCharlesW727" target="_blank">Twitter</a>. If you are interested in working on a project together, don't hesitate to get in touch:
+      </p>
+      <a class="button" href="mailto:sircharleswatson@gmail.com">Send Me An Email</a>
+    </div>
+  </div>
 </template>
