--- a/client/templates/includes/footer.html
+++ b/client/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
-  <div id="footer">
+<!--   <div id="footer">
     <footer>
       <ul>
         <li>Stackoverflow</li>
@@ -7,5 +7,5 @@
         <li>Twitter</li>
       </ul>
     </footer>
-  </div>
+  </div> -->
 </template>
