--- a/client/templates/includes/footer.html
+++ b/client/templates/includes/footer.html
@@ -1,11 +1,24 @@
 <template name="footer">
-<!--   <div id="footer">
+  <div id="footer-wrapper">
     <footer>
       <ul>
-        <li>Stackoverflow</li>
-        <li>Github</li>
-        <li>Twitter</li>
+        <li>
+          <a href="http://stackoverflow.com/users/1681809/sircharleswatson" target="_blank">
+            <img src="/stackoverflow_logo.png" />
+          </a>
+        </li>
+        <li>
+          <a href="http://github.com/sircharleswatson" target="_blank">
+            <img id="github" src="/github_logo.png" />
+          </a>
+        </li>
+        <li>
+          <a href="http://twitter.com/sircharlesw727" target="_blank">
+            <img src="/twitter_logo.png" />
+          </a>
+        </li>
       </ul>
+      <a class="button" href="mailto:sircharleswatson@gmail.com">Send Me An Email</a>
     </footer>
-  </div> -->
+  </div>
 </template>
