--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,11 +1,11 @@
 <template name="header">
-  <div class="header-wrapper">
+  <div id="header-wrapper">
     <div class="header">
-      <h1 class="type-text" id="intro" title="jqueri~1 y^1000  plugins.;jQuery,\njQueryScript.net^2000 , character deletion~20; auto delete^2000 , customisable cursor;"></h1>
+      <h1 id="intro" title="jqueri~1 y^1000  plugins.;jQuery,\njQueryScript.net^2000 , character deletion~20; auto delete^2000 , customisable cursor;"></h1>
       <h2>
         I'm a Web Developer from Minneapolis, MN.
         <br>
-        I make web applications, usually with Meteor
+        I make web applications, usually with Meteor.
       </h2>
       <p>
        <a class="button" href="mailto:sircharleswatson@gmail.com">Send Me An Email</a>
