--- a/client/stylesheets/header.css
+++ b/client/stylesheets/header.css
@@ -1,16 +1,19 @@
-.header-wrapper {
+#header-wrapper {
   background: #3AAED8;
   position: relative;
   margin: 0;
   display: inline-block;
-  width: 100%
+  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .header {
+  max-width: 1200px;
   position: relative;
   font-family: 'Ubuntu', sans-serif;
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 1em;
   padding-top: 1em;
   padding-bottom: 1em;
@@ -42,6 +45,6 @@ a.button {
 }
 
 .teletype-prefix {
-  color: #474646;
+  color: #636363;
 }
 
